<?xml version="1.0"?>
<package format="3">
  <name>cpp_pubsub</name>
  <version>0.0.1</version>
  <description>odometry-bag-to-hdmapping-session converter</description>

  <maintainer email="matecki.m@outlook.com">Marcin Matecki</maintainer>
  <maintainer email="p.lekston@gmail.com">Przemyslaw Lekston</maintainer>
  <license>MIT</license>

  <!-- <buildtool_depend>ament_cmake</buildtool_depend> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>livox_ros_driver2</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rosbag</build_depend> 

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>livox_ros_driver2</exec_depend>
  <exec_depend>rosbag</exec_depend> 
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
  
 <!--  <export>
    <build_type>ament_cmake</build_type>
  </export>-->
</package>
